@@ -2,7 +2,7 @@ package com.agence.location.servlet;
 
 import com.agence.location.service.ClientService;
 import com.agence.location.model.Client;
-import com.agence.location.model.Utilisateur;
+import com.agence.location.model.Utilisateur; // Pour vérifier le rôle
 
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
@@ -12,7 +12,7 @@ import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 import java.io.IOException;
 import java.util.List;
-import java.util.Collections; // Pour List.of() pour d'anciennes versions de Java
+import java.util.Collections; // Pour Collections.singletonList() et Collections.emptyList()
 
 /**
  * Servlet pour gérer les opérations CRUD sur les clients.
@@ -33,23 +33,38 @@ public class ClientServlet extends HttpServlet {
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         HttpSession session = request.getSession(false);
 
+        // Vérification de l'authentification et du rôle (seul le gestionnaire peut gérer les clients)
         if (session == null || session.getAttribute("utilisateur") == null || !"Gestionnaire".equals(session.getAttribute("role"))) {
-            response.sendRedirect("login.jsp");
+            response.sendRedirect("login.jsp"); // Redirige vers la page de connexion si non autorisé
             return;
         }
 
         String action = request.getParameter("action");
         if (action == null) {
-            action = "list";
+            action = "list"; // Action par défaut
+        }
+
+        // Récupère les messages de succès/erreur de la session et les met dans la requête
+        // Cela permet aux JSPs d'afficher les messages après une redirection POST -> GET
+        if (session.getAttribute("message") != null) {
+            request.setAttribute("message", session.getAttribute("message"));
+            session.removeAttribute("message"); // Supprime de la session après lecture
+        }
+        if (session.getAttribute("error") != null) {
+            request.setAttribute("error", session.getAttribute("error"));
+            session.removeAttribute("error"); // Supprime de la session après lecture
         }
 
         switch (action) {
             case "new":
+                // Utilise null pour indiquer un nouveau client, la JSP affichera un formulaire vide
+                request.setAttribute("client", null);
                 request.getRequestDispatcher("/WEB-INF/views/clientForm.jsp").forward(request, response);
                 break;
             case "edit":
                 String cinToEdit = request.getParameter("cin");
                 Client clientToEdit = clientService.getClientByCin(cinToEdit);
+                // Passe l'objet client à la JSP pour pré-remplir le formulaire
                 request.setAttribute("client", clientToEdit);
                 request.getRequestDispatcher("/WEB-INF/views/clientForm.jsp").forward(request, response);
                 break;
@@ -57,11 +72,11 @@ public class ClientServlet extends HttpServlet {
                 String cinToDelete = request.getParameter("cin");
                 try {
                     clientService.deleteClient(cinToDelete);
-                    request.setAttribute("message", "Client supprimé avec succès !");
+                    session.setAttribute("message", "Client supprimé avec succès !"); // Message en session pour la redirection
                 } catch (RuntimeException e) {
-                    request.setAttribute("error", "Erreur lors de la suppression du client : " + e.getMessage());
+                    session.setAttribute("error", "Erreur lors de la suppression du client : " + e.getMessage()); // Erreur en session
                 }
-                response.sendRedirect("clients?action=list"); // Toujours rediriger après POST/DELETE
+                response.sendRedirect("clients?action=list"); // Redirige vers la liste
                 break;
             case "search":
                 String searchCin = request.getParameter("searchCin");
@@ -91,6 +106,8 @@ public class ClientServlet extends HttpServlet {
 
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        System.out.println("ClientServlet: Méthode doPost appelée pour l'URL: " + request.getRequestURI() + " avec action: " + request.getParameter("action")); // NOUVEAU LOG DE DÉBOGAGE
+
         HttpSession session = request.getSession(false);
         if (session == null || session.getAttribute("utilisateur") == null || !"Gestionnaire".equals(session.getAttribute("role"))) {
             response.sendRedirect("login.jsp");
@@ -99,6 +116,7 @@ public class ClientServlet extends HttpServlet {
 
         String action = request.getParameter("action");
         String cin = request.getParameter("cin");
+        String permis = request.getParameter("permis"); // Récupère le champ permis du formulaire
         String prenom = request.getParameter("prenom");
         String nom = request.getParameter("nom");
         String sexe = request.getParameter("sexe");
@@ -106,23 +124,26 @@ public class ClientServlet extends HttpServlet {
         String email = request.getParameter("email");
         String telephone = request.getParameter("telephone");
 
-        Client client = new Client(cin, prenom, nom, sexe, adresse, email, telephone);
+        // Crée un objet Client avec le champ permis. Assurez-vous que Client.java a le bon constructeur.
+        Client client = new Client(cin, permis, prenom, nom, sexe, adresse, email, telephone);
 
         try {
             if ("add".equals(action)) {
                 clientService.addClient(client);
-                request.setAttribute("message", "Client ajouté avec succès !");
+                session.setAttribute("message", "Client ajouté avec succès !"); // Message en session pour la redirection
             } else if ("update".equals(action)) {
                 clientService.updateClient(client);
-                request.setAttribute("message", "Client mis à jour avec succès !");
+                session.setAttribute("message", "Client mis à jour avec succès !"); // Message en session
             }
         } catch (RuntimeException e) {
-            request.setAttribute("error", "Erreur lors de l'opération sur le client : " + e.getMessage());
-            request.setAttribute("client", client);
+            session.setAttribute("error", "Erreur lors de l'opération sur le client : " + e.getMessage()); // Erreur en session
+            e.printStackTrace(); // TRÈS IMPORTANT: Afficher la stack trace complète en cas d'erreur
+            // Si l'erreur est liée au formulaire (ex: CIN déjà existant), on forwarde pour réafficher le formulaire avec l'erreur
+            request.setAttribute("client", client); // Repopule le formulaire avec les données entrées
             request.getRequestDispatcher("/WEB-INF/views/clientForm.jsp").forward(request, response);
-            return;
+            return; // Important: arrêter le traitement ici pour éviter la double réponse
         }
 
-        response.sendRedirect("clients?action=list");
+        response.sendRedirect("clients?action=list"); // Redirige toujours vers la liste après une opération réussie
     }
 }
